scrollbar styling fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,12 +29,11 @@ button:hover{
 
 ::-webkit-scrollbar-track {
     background: #f0fdf4;
-    border-radius: 20px;
+    border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #00c951;
-    border-radius: 20px;
-    border: 2px solid black;
-    box-shadow: 2px 2px 0 black;
+    border-radius: 8px;
+    border: 4px solid black;
 }
